# cockpitdecks

./: .gitattributes  .gitignore  .pylintrc  LICENCE  Makefile  PI_cbe.py  PI_cmd_begin_end.py  PI_cockpitdecks.py  PI_cockpitdecks_helper.py  PI_decks.py  PI_decks_helper.py  PI_drefstrudp.py  PI_streamdecks.py  PI_streamdecks_helper.py  PI_string_datarefs_udp.py  README.md  TODO.md  a.yaml  cmd_begin_end_demo.py  cockpitdecks_upd_start.py  datarefs-log-keep.yaml  decklayout.py  device-list-test.json  env.yaml  errors.py  events-keep.json  find_deck_serials.py  find_loupedeck_serials.py  find_xtouchmini_serials.py  findxp.py  freeze.txt  keywords.txt  load_functions.py  packages.txt  pyproject.toml  replay.py  requirements.txt  setup.py  start.py  start_cockpit.py  (+16 more)
A21N/deckconfig/: config.yaml  secret.yaml
A21N/deckconfig/comm-radio/: a.yaml  b.yaml  config.yaml  encoders.yaml  views.yaml
A21N/deckconfig/consoles/: adirs.yaml  c3000.yaml  cockpitdecks.yaml  config.yaml  dashboard.yaml  ecam.yaml  efis.yaml  index-alt.yaml  index-old.yaml  index.yaml  intlights.yaml  ovrhdaircond.yaml  ovrhdelec.yaml  ovrhdfire.yaml  ovrhdfuel.yaml  ovrhdhyd.yaml  piedestal.yaml  popups.yaml  radio.yaml  template.txt  toliss.yaml  xplane.yaml  xpndr.yaml
A21N/deckconfig/cosmic_3000/: index.yaml
A21N/deckconfig/efis-ecam/: config.yaml  efis.yaml  index.yaml
A21N/deckconfig/fcu/: index.yaml  popups.yaml  views.yaml
A21N/deckconfig/live/: index.yaml  popups.yaml
A21N/deckconfig/overhead/: index-old.yaml  intlights.yaml  ovrhdaircond.yaml  ovrhdfire.yaml  ovrhdfuel.yaml  ovrhdhyd.yaml  xpndr.yaml
A21N/deckconfig/sd15/: index-old.txt  index.yaml
A21N/deckconfig/sd32/: adirs.yaml  efis.yaml  ovrhdextlights.yaml
A21N/deckconfig/test/: index.yaml
A21N/deckconfig/xtouch/: encoders.yaml
A320/deckconfig/: secret.yaml
A320/deckconfig/dev15/: secondpage.yaml
A320/deckconfig/layout15/: PIEDESTAL.yaml
A320/deckconfig/layout32/: ECAM.yaml  EXTLIGHTS.yaml  HYD.yaml  PIEDESTAL.yaml  index.yaml
A320/deckconfig/live/: index-test.txt  index.yaml
A320/deckconfig/pma15/: index.yaml
A320/deckconfig/pma32/: ovrhdelec.yaml  xplane.yaml
A320/deckconfig/pmaldlive/: views.yaml
A320/deckconfig/touch/: views.yaml
A321/deckconfig/: config.yaml
A321/deckconfig/dev32/: configpour32.yaml
A321/deckconfig/layout15/: A321.yaml  OVERHEAD.yaml  X-Camera Views.yaml  index.yaml
A321/deckconfig/layout32/: FD.yaml  FUEL.yaml  Ground Services.yaml  X-Camera Views.yaml
A321/deckconfig/live/: index-airbus.txt  index.yaml  popups.yaml  views.txt  views.yaml  work.txt  work.yaml
A321/deckconfig/overhead/: adirs.yaml  config.yaml  index-old.yaml  index.yaml  ovrhdapu.yaml  ovrhdelec.yaml  ovrhdfuel.yaml  ovrhdhyd.yaml  piedestal.yaml  radio.yaml  xplane.yaml  xpndr.yaml
A321/deckconfig/piedestal/: index.yaml
A321/deckconfig/pma15/: EFIS.yaml
A321/deckconfig/pma32/: adirs.yaml  index.yaml  ovrhdaircond.yaml  ovrhdapu.yaml  ovrhdfuel.yaml  xplane.yaml
A321/deckconfig/pmaldlive/: index.yaml  views.yaml
A321/deckconfig/resources/: Commands.txt  drt_last_run_datarefs.txt
A321/deckconfig/sd15/: EFIS.yaml  index.yaml
A321/esdconfig/: README.md  config.yaml  drt_last_run_commandrefs.txt
A333/deckconfig/: config.yaml
A333/esdconfig/: config.yaml
AIRCRAFT/deckconfig/: config.yaml
C172/deckconfig/: config.yaml
DEV/deckconfig/: config.yaml  secret.yaml
cockpitdecks/: TODO.txt  __init__.py  activation.py  activity.py  aircraft.py  button.py  button_activation.py  button_annunciator.py  button_draw.py  button_ext.py  button_representation.py  cockpit.py  collector.py  color.py  config-mini.yaml  config-remote-template.yaml  config-remote.yaml  config-studio.py  config-studio.yaml  config.template.py  config.yaml  constant.py  data.py  deck.py  devices.py  environ-local-template.yaml  environ-remote.yaml  environ-test.yaml  environ-xp-on-mini.yaml  environ-xp-on-studio.yaml  environ.yaml  errors.py  event.py  formula.py  instruction.py  loupedeck.py  network-template.py  network.py  observable.py  page.py  (+17 more)
cockpitdecks/buttons/: __init__.py  annunciator.py  draw.py  external.py
cockpitdecks/decks/: __init__.py  __init__orig__.py  event.py  loupedeck copie.py  loupedeck.py  streamdeck.py  virtualdeck.py  xtouchmini.py
cockpitdecks/resources/: color.py  config.yaml  decktype.py  drawings.txt  geo.py  iconfonts.py  icons.py  intdatarefs.py  intvariables.py  kml.py  metar.py  nginx.conf  observables.yaml  rpc.py  stationobs.py  style.yaml  ts.py  weather.py  weathericon.py  weathericons-orig.py  weathericons.py
cockpitdecks/simulators/: __init__.py  dcc.py  xplane.py
cockpitdecks_ext/: __init__.py
cockpitdecks_ext/decks/: __init__.py  customdeck.py
decks/: LICENCE  README.md  TODO.md  __init__.py  button-orig.py  button.py  button_activation.py  button_airbus.py  button_annunciator.py  button_annunciators-orig.py  button_annunciators.py  button_core.py  button_data.py  button_draw.py  button_ext.py  button_knob.py  button_loupe.py  button_representation.py  cockpit.py  color.py  constant.py  deck.py  decks.py  devices.py  icons.py  loupedeck.py  page.py  representation.py  rpc.py  streamdeck.py  t.py  xp.py  xpdref.py  xpdref_round.py  xplane.py  xplanesdk.py  xplaneudp.py  xtouchmini.py
decks/Loupedeck/: DeviceManager.py  __init__.py
decks/XTouchMini/: DeviceManager.py  PI_XTouchMini.py  __init__.py
decks/button_old/: button_loupe.py
decks/resources/: config.yaml  icons.py  weathericons-orig.py  weathericons.py
docs/: .$cockpitdecks.drawio.bkp  activation_decision_tree.drawio  cockpitdecks.drawio  icon_naming.md  temp.md  text label hierarchy.drawio
docs/button_old/: button_all.py
docs/images/: ab-example.txt
i/: README.md
streamdeck/: __init__.py  button.py  constant.py  streamdeck.py  streamdecks.py
streamdecks/: .smbdeleteAAA1f4e55d  LICENCE  XPDref.py  __init__.py  button-okfor3.py  button.py  constant.py  neon.py  rpc.py  streamdeck.py  streamdecks.py  xplane.py  xplaneapi.py  xplanesdk.py  xplaneudp.py
streamdecks/resources/: config.yaml
(+338 files in other folders)
