# ###########################################
#
# Project
#
[project]
name = "cockpitdecks"

authors = [
  { name="Pierre M.", email="pierre@devleaks.be" },
  { name="Duane Licudi", email="dlicudi@gmail.com" }
]

description = "Decks and web decks to X-Plane Cockpit"

readme = "README.md"

license = {file = "LICENCE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation",
]

requires-python = ">=3.10"

dependencies = [
   "CairoSVG~=2.7.1",
   "Flask~=3.0.3",
   "pillow~=10.4.0",
   "ruamel.yaml~=0.18.6",
   "simple-websocket~=1.0.0"
]

dynamic = [
    "version"
]

[project.optional-dependencies]
streamdeck = ["streamdeck~=0.9.5"]
loupedeck = ["loupedeck @ git+https://github.com/devleaks/python-loupedeck-live.git"]
xtouchmini = ["xtouchmini @ git+https://github.com/devleaks/python-berhinger-xtouchmini.git"]
weather = [
    "avwx-engine~=1.9.0",
    "scipy",
    "suntime",
    "timezonefinder",
    "metar~=1.11.0"
]

[project.urls]
Homepage = "https://devleaks.github.io/cockpitdecks-docs/"
Documentation = "https://devleaks.github.io/cockpitdecks-docs/"
Issues = "https://github.com/devleaks/cockpitdecks/issues"
Source = "https://github.com/devleaks/cockpitdecks"

[project.scripts]
cockpitdecks-cli = "cockpitdecks:start.main"

# ###########################################
#
# Edit
#
[tool.ruff]
line-length = 160
docstring-code-format = true
select = [
    "E",
    "F",
    "W",
]
ignore = []

[tool.black]
line-length = 160

[tool.flake8]
max-line-length = 160

# ###########################################
#
# Build
#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "cockpitdecks/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true
