# ###########################################
#
# Project
#
[project]
name = "cockpitdecks"

authors = [
  { name="Pierre M.", email="pierre@devleaks.be" },
  { name="Duane Licudi", email="dlicudi@gmail.com" }
]

description = "Decks and web decks to X-Plane Cockpit"

readme = "README.md"

license = {file = "LICENCE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation",
]

requires-python = ">=3.10"

dependencies = [
    "cockpitdecks_xp @ git+https://github.com/devleaks/cockpitdecks_xp.git",
    "CairoSVG~=2.7.1",
    "Flask~=3.0.3",
    "pillow~=10.4.0",
    "ruamel.yaml~=0.18.6",
    "simple-websocket~=1.0.0",
    "requests~=2.32.3",
    "py3rtree @ git+https://github.com/drwelby/py3rtree",
    "jsonlines~=4.0.0",
]

dynamic = [
    "version"
]

[project.optional-dependencies]
weather = ["cockpitdecks_wm @ git+https://github.com/devleaks/cockpitdecks_wm.git"]
streamdeck = ["cockpitdecks_sd @ git+https://github.com/devleaks/cockpitdecks_sd.git"]
loupedeck = ["cockpitdecks_ld @ git+https://github.com/devleaks/cockpitdecks_ld.git"]
xtouchmini = ["cockpitdecks_bx @ git+https://github.com/devleaks/cockpitdecks_bx.git"]
demoext = ["cockpitdecks_ext @ git+https://github.com/devleaks/cockpitdecks_ext.git"]
development = [
    "types-Flask~=1.1.6",
    "types-Pillow~=10.2.0",
    "types-requests~=2.32.0",
    "types-tabulate~=0.9.0",
]

[project.urls]
Homepage = "https://devleaks.github.io/cockpitdecks-docs/"
Documentation = "https://devleaks.github.io/cockpitdecks-docs/"
Issues = "https://github.com/devleaks/cockpitdecks/issues"
Source = "https://github.com/devleaks/cockpitdecks"

[project.scripts]
cockpitdecks-cli = "cockpitdecks:start.main"

# ###########################################
#
# Edit
#
[tool.ruff]
line-length = 160
docstring-code-format = true
select = [
    "E",
    "F",
    "W",
]
ignore = []

[tool.black]
line-length = 160

[tool.flake8]
max-line-length = 160

# ###########################################
#
# Build
#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "cockpitdecks/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true
