# ###########################################
#
# Project
#
[project]
name = "cockpitdecks"

authors = [
  { name="Pierre M.", email="pierre@devleaks.be" },
  { name="Duane Licudi", email="dlicudi@gmail.com" }
]

description = "Decks and web decks to X-Plane Cockpit"

readme = "README.md"

license = {file = "LICENCE"}

classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Games/Entertainment :: Simulation",
]

requires-python = ">=3.10"

dependencies = [
    "CairoSVG~=2.7.1",
    "Flask~=3.1.0",
    "jsonlines~=4.0.0",
    "packaging~=24.0",
    "pillow~=11.2.0",
    "py3rtree @ git+https://github.com/drwelby/py3rtree",
    "requests~=2.32.3",
    "ruamel.yaml~=0.18.8",
    "simple-websocket~=1.1.0",
    "usb-monitor~=1.23"
]

dynamic = [
    "version"
]

[project.optional-dependencies]
# Simulators
xplane = ["cockpitdecks_xp @ git+https://github.com/devleaks/cockpitdecks_xp.git"]
# msfs = ["cockpitdecks_fs @ git+https://github.com/devleaks/cockpitdecks_fs.git"]
# Extensions
weather = ["cockpitdecks_wm @ git+https://github.com/devleaks/cockpitdecks_wm.git"]
toliss = ["cockpitdecks_tl @ git+https://github.com/devleaks/cockpitdecks_tl.git"]
demoext = ["cockpitdecks_ext @ git+https://github.com/devleaks/cockpitdecks_ext.git"]
# Decks
streamdeck = ["cockpitdecks_sd @ git+https://github.com/devleaks/cockpitdecks_sd.git"]
loupedeck = ["cockpitdecks_ld @ git+https://github.com/devleaks/cockpitdecks_ld.git"]
xtouchmini = ["cockpitdecks_bx @ git+https://github.com/devleaks/cockpitdecks_bx.git"]
# For developer only
development = [
    "types-click",
    "types-Flask",
    "types-Jinja2",
    "types-MarkupSafe",
    "types-Pillow",
    "types-requests",
    "types-tabulate",
    "types-Werkzeug"
]


[project.urls]
Homepage = "https://devleaks.github.io/cockpitdecks-docs/"
Documentation = "https://devleaks.github.io/cockpitdecks-docs/"
Issues = "https://github.com/devleaks/cockpitdecks/issues"
Source = "https://github.com/devleaks/cockpitdecks"

[project.scripts]
cockpitdecks-cli = "cockpitdecks:start.main"

# ###########################################
#
# Edit
#
[tool.ruff]
line-length = 160
docstring-code-format = true
select = [
    "E",
    "F",
    "W",
]
ignore = []

[tool.black]
line-length = 160

[tool.flake8]
max-line-length = 160

# ###########################################
#
# Build
#
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "cockpitdecks/__init__.py"

[tool.hatch.metadata]
allow-direct-references = true
